# vex

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
dependencies/: BuildDependencies.py
examples/0 - Simple window/: Init.xml
examples/1 - Multiple windows/: Init.xml
examples/2 - Button/: Init.xml
examples/3 - Button onClick/: CMakeLists.txt  Init.xml
examples/3 - Button onClick/src/: App.cpp
src/vex/: Vex.cpp  Vex.h  main.cpp
src/vex/binding/: FunctionTypes.h
src/vex/layout/: LayoutParser.cpp  LayoutParser.h
src/vex/rendering/: GfxWindow.cpp  GfxWindow.h  Renderer.cpp  WindowManager.cpp  WindowManager.h
src/vex/ui/: LayoutParser.cpp  LayoutParser.h
src/vex/ui/common/: Color.cpp  Color.h
src/vex/ui/core/: Application.cpp  Application.h  UIElement.cpp  UIElement.h  Window.cpp  Window.h
src/vex/ui/elements/: Button.cpp  Button.h  UIElement.cpp  UIElement.h
src/vex/ui/layouts/: FreeLayout.cpp  FreeLayout.h  LayoutBase.cpp  LayoutBase.h
src/vex/ui/parsing/: IParsingFunction.h
src/vex/ui/parsing/core/: ApplicationParsingFunction.cpp
src/vex/ui/parsing/elements/: ButtonParsingFunction.cpp  ButtonParsingFunction.h
src/vex/utility/: Utility.cpp  Utility.h
vex/: CMakeLists.txt
vex-live/: CMakeLists.txt
vex-live/src/: main.cpp
vex/src/vex/: Macros.h  Vex.cpp
vex/src/vex/binding/: CodeLoader.cpp  CodeLoader.h
vex/src/vex/rendering/: GfxWindow.h  Renderer.h  WindowManager.cpp  WindowManager.h
vex/src/vex/ui/core/: Application.cpp  Application.h  Window.h
vex/src/vex/ui/elements/: Button.cpp  Button.h
vex/src/vex/ui/layouts/: FreeLayout.cpp  FreeLayout.h  LayoutBase.h
vex/src/vex/ui/parsing/: IParsingFunction.cpp  LayoutParser.cpp  LayoutParser.h
vex/src/vex/ui/parsing/core/: ApplicationParsingFunction.h  WindowParsingFunction.cpp  WindowParsingFunction.h
vex/src/vex/ui/parsing/elements/: ButtonParsingFunction.cpp  ButtonParsingFunction.h
vex/src/vex/ui/parsing/layouts/: FreeLayoutParsingFunction.cpp  FreeLayoutParsingFunction.h
vex/src/vex/utility/: Logger.cpp  Logger.h  Utility.h
